fixed display and layout issues for date input

--- a/client/src/styles/Modal.css
+++ b/client/src/styles/Modal.css
@@ -103,3 +103,48 @@
 .saveBtn:hover {
   background-color: #d06be2;
 }
+
+.inputGroup input[type="date"] {
+  background-color: #3b3665;
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  color: white;
+  font-size: 14px;
+  outline: none;
+  width: 100%;
+
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
+  background-image: url("../assets/calendar.png");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 17px 17px;
+}
+
+.inputGroup input,
+.inputGroup select {
+  height: 42px;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  position: absolute;
+  right: 10px;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+input[type="date"]::-moz-calendar-picker-indicator {
+  opacity: 0;
+}
+
+.inputGroup input[type="date"] {
+  background-image: url("../assets/calendar.png");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 17px 17px;
+}
